test/langtools/tools/javac/specialConstantFolding/IndyLinkageErrorTest.out
IndyLinkageErrorTest.java:25:49: compiler.err.invocation.name.cannot.be.empty
1 error
